Add about and project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    
+    <link rel="stylesheet" href="./assets/css/about.css">
+    <link rel="stylesheet" href="./assets/css/project.css">
 </head>
 <body>
     <header class="navigation">
@@ -31,12 +32,12 @@
     <div class="bg-full">
         <section class="container main" id="main">
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-lg-6">
                     <div class="wrapper">
                         <div class="inner-wrapper">
                             <picture>
-                                <source srcset="./assets/images/laptop big.webp">
-                                <img class="main-img" src="./assets/images/laptop 612x612 Малый.png" alt="">
+                                <source srcset="./assets/images/laptop.webp">
+                                <img class="main-img" src="./assets/images/laptop 357x234.png" alt="laptop">
                             </picture>
                         </div>
                     </div>
@@ -49,5 +50,56 @@
             </div>
         </section>
     </div>
+    <div class="about bg-full"  id="about">
+        <section class="about-info container col-12 col-md-6 ">
+            <h2 class="about-heading">Обо мне</h2>
+            <p class=" about-content content row-overflow">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+        </section>
+    </div>
+    <div class="project bg-full ">
+        <div class="row container">
+            <section class="col-12 col-sm-8 col-md-4 col-xl-2 project-wrap">
+                <div class="bg-img"></div>
+                    <div class="project-info">
+                    <h3 class="project-title">40+</h3>
+                    <p class="project-subtitle">проектов</p>
+                </div>
+            </section>
+            <section class="col-12 col-sm-4 col-md-4 col-xl-2 project-wrap">
+                <div class="bg-img"></div>
+                <div class="project-info">
+                    <h3 class="project-title">40+</h3>
+                    <p class="project-subtitle">проектов</p>
+                </div>
+            </section>
+            <section class="col-12 col-sm-8 col-md-4 col-xl-2 project-wrap ">
+                <div class="bg-img"></div>
+                    <div class="project-info">
+                    <h3 class="project-title">40+</h3>
+                    <p class="project-subtitle">проектов</p>
+                </div>
+            </section>
+            <section class="col-12 col-sm-4 col-md-4 col-xl-2 project-wrap">
+                <div class="bg-img"></div>
+                <div class="project-info">
+                    <h3 class="project-title">40+</h3>
+                    <p class="project-subtitle">проектов</p>
+                </div>
+            </section>
+            <section class="col-12 col-sm-8 col-md-4 col-xl-2 project-wrap ">
+                <div class="bg-img"></div>
+                    <div class="project-info">
+                    <h3 class="project-title">40+</h3>
+                    <p class="project-subtitle">проектов</p>
+                </div>
+            </section>
+            <section class="col-12 col-sm-4 col-md-4 col-xl-2 project-wrap">
+                <div class="bg-img"></div>
+                <div class="project-info">
+                    <h3 class="project-title">40+</h3>
+                    <p class="project-subtitle">проектов</p>
+                </div>
+            </section>
+        </div>
 </body>
 </html>
